--- a/wp-content/themes/skilled-child/css/responsive.css
+++ b/wp-content/themes/skilled-child/css/responsive.css
@@ -22,6 +22,7 @@
 	padding: 2em 0 0 0;
 }
 
+.availability-content span,
 .session-info .hasDatepicker .ui-datepicker-header select.ui-datepicker-month, 
 .session-info .hasDatepicker .ui-datepicker-header  select.ui-datepicker-year,
 video.video-js,
