--- a/wp-content/themes/skilled-child/style.css
+++ b/wp-content/themes/skilled-child/style.css
@@ -228,8 +228,8 @@ input[type="button"].cancel-btn:hover{
   	padding: 2em 0;
 	margin:0;
 	color:#fff;
-	height:220px;
-	min-height:22px;
+	/*height:220px;
+	min-height:22px;*/
 }
 
 .category-box .vc_column-inner{
@@ -834,7 +834,7 @@ p.sublinks{
 	min-height: 500px;
 	max-height:500px;
 	height:500px;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 /* STYLE 1 */
