--- a/wp-content/themes/skilled-child/style.css
+++ b/wp-content/themes/skilled-child/style.css
@@ -1395,8 +1395,10 @@ ul.oneonone-results a.button{
    line-height: 1.5;
    font-weight: normal;
    margin: 0.5em 0 0 0;
-   display: block;
-   width:100px;
+   display: inline-block;
+   width:110px;
+   max-width:120px;
+   text-align: center;
 }
 
 ul.exam-prep-results a.button:hover,
@@ -2124,9 +2126,9 @@ div.dataTables_wrapper div.dataTables_length select{width:200px; margin:0 0.5em 
 }
 
 .wh-footer, .wh-footer p, .wh-footer span{
-	color:#fff;
+	color:#fff !important;
 }
 
 .ipad-banner{display:none;}
 
-.video-js{max-width:inherit !important;}
+.video-js{max-width:100% !important;}
