--- a/wp-content/themes/skilled-child/style.css
+++ b/wp-content/themes/skilled-child/style.css
@@ -698,7 +698,8 @@ select.select{
 }
 
 .student-registration .form-inline .add-more{
-    margin: 0 0 0 1em;
+    margin: 0.5em 0 0 1em;
+    display: inline-block;
 }
 
 .box-heading h4{
