--- a/wp-content/themes/skilled-child/css/responsive.css
+++ b/wp-content/themes/skilled-child/css/responsive.css
@@ -916,7 +916,7 @@ ul.exam-prep-results li.result-box, ul.oneonone-results li.result-box{
 
 .registration-blog{width: 30% !important;}
 
-.left-slider{height:181px !important;}
+/*.left-slider{height:181px !important;}*/
 
 .howitworks-image{height:181px !important;}
 
