--- a/wp-content/themes/skilled-child/style.css
+++ b/wp-content/themes/skilled-child/style.css
@@ -232,6 +232,36 @@ input[type="button"].cancel-btn:hover{
 	min-height:22px;*/
 }
 
+/*scroll css*/
+.aio-icon-description::-webkit-scrollbar-track,
+.aio-icon-box.top-icon::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #40535e;
+}
+.aio-icon-description::-webkit-scrollbar,
+.aio-icon-box.top-icon::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #40535e;
+}
+.aio-icon-description::-webkit-scrollbar-thumb,
+.aio-icon-box.top-icon::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: rgba(64, 83, 94, 0.35);
+}
+
+.academic-courses .aio-icon-box.top-icon,
+.success-coaching .aio-icon-box.top-icon,
+.nutritional-courses .aio-icon-box.top-icon,
+.self-study .aio-icon-box.top-icon{
+	height: 180px;
+    overflow-y: auto;
+}
+
 .category-box .vc_column-inner{
 	padding: 0 1px;
 }
@@ -245,7 +275,7 @@ input[type="button"].cancel-btn:hover{
 }
 
 .academic-courses .aio-icon-description{
-	padding: 0 3em;
+	padding: 0 0.5em;
 }
 /*----------error class added----------*/
 .error {
@@ -837,28 +867,9 @@ p.sublinks{
 	min-height: 500px;
 	max-height:500px;
 	height:500px;
-	overflow-y: auto;
-}
-/*scroll css*/
-.column-grey-dark::-webkit-scrollbar-track
-{
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	border-radius: 10px;
-	background-color: #40535e;
+	/*overflow-y: auto;*/
 }
 
-.column-grey-dark::-webkit-scrollbar
-{
-	width: 12px;
-	background-color: #40535e;
-}
-
-.column-grey-dark::-webkit-scrollbar-thumb
-{
-	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: rgba(64, 83, 94, 0.35);
-}
 
 .column-grey-dark:last-child{
 	border-right:0;
@@ -881,30 +892,6 @@ p.sublinks{
 	width: 100%;
 }
 
-.highq-diff-box .vc_column_container{
-    height: 200px;
-	overflow-y: auto;
-}
-
-.highq-diff-box .vc_column_container::-webkit-scrollbar-track
-{
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	border-radius: 10px;
-	background-color: #fcfcfc;
-}
-
-.highq-diff-box .vc_column_container::-webkit-scrollbar
-{
-	width: 12px;
-	background-color: #fcfcfc;
-}
-
-.highq-diff-box .vc_column_container::-webkit-scrollbar-thumb
-{
-	border-radius: 5px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: rgba(64, 83, 94, 0.08);
-}
 
 /*----------Tutors Lisitng Page----------*/
 .dropdown-result{
@@ -2020,23 +2007,23 @@ min-height:267px;
 	font-size:16px;
 }
 
-.carousel .tutor-slider{
+ .slick-track{
 	margin:3%;
+	background:#c6cbcf;
 }
 
-.carousel .tutor-slider li{
+ .slick-track .slick-slide{
 	width:20.5%;
 	min-height:360px;
-	background:#fff;
-    padding: 0;
+	padding: 0;
     margin: 2%;
 }
 
-.carousel .tutor-slider li p{
-    margin: 10px 0;
+.slick-track .slick-slide p{
+    background:#fff;
 }
 
-.carousel .tutor-slider li a{
+ .slick-track .slick-slide a{
 	color: #41535f;
 	font-size:18px;
 }
