--- a/wp-content/themes/skilled-child/style.css
+++ b/wp-content/themes/skilled-child/style.css
@@ -542,8 +542,9 @@ div.dataTables_wrapper div.dataTables_filter input,
     background: #D8621D;
     border-color: #ab4f27;
 	outline: none;
-	height: 35px;
+	height: 31px;
     line-height: 2;
+	vertical-align:top;
 }
 
 .btn-primary:hover {
@@ -578,6 +579,11 @@ p.chzn-drop{
 	width: 100%;
 }
 
+.tutor-registration .educational-section .form-inline .choose-file p.field-para{
+    width:87% ;	
+}
+
+
 .tutor-registration .educational-section .form-inline{
 	margin: 1em 0 0 0;
 }
@@ -611,7 +617,8 @@ p.chzn-drop{
 .student-registration.student-account .col-md-8.course-details,
 .student-registration .form-inline .col-md-4,
 .student-registration .form-inline .col-md-6.address,
-.student-registration .form-inline .col-md-6.shipping-address{
+.student-registration .form-inline .col-md-6.shipping-address,
+.student-registration .form-inline .col-md-8.phone{
 	margin:0 0 1em 0;
 }
 
@@ -1350,10 +1357,13 @@ nav.woocommerce-MyAccount-navigation ul li.is-active{
 /*Course page ui starts*/
 ul.exam-prep-results,
 ul.oneonone-results{
-   margin: 2em 0 0 0 !important;
+   margin: 1em 0 0 0 !important;
 
 }
 
+.exam-prep-results.profilepage-result h3{
+	margin:0.3em 0;	
+}
 
 ul.exam-prep-results li.result-box,
 ul.oneonone-results li.result-box{
@@ -1813,6 +1823,7 @@ ul.oneonone-results li.result-box .tutor-info{
 
 .tutor-detail-box .course-video-box{
 	border:0;
+	padding:0;
 }
 
 .buttons-para button{
@@ -2009,7 +2020,7 @@ min-height:267px;
 
  .slick-track{
 	margin:3%;
-	background:#c6cbcf;
+	
 }
 
  .slick-track .slick-slide{
@@ -2123,3 +2134,7 @@ div.dataTables_wrapper div.dataTables_length select{width:200px; margin:0 0.5em 
 .ipad-banner{display:none;}
 
 .video-js{max-width:100% !important;}
+
+.wh-footer .wh-footer-bottom .sf-menu {
+    margin: 0 0;
+}
