--- a/wp-content/themes/skilled-child/style.css
+++ b/wp-content/themes/skilled-child/style.css
@@ -2139,3 +2139,6 @@ div.dataTables_wrapper div.dataTables_length select{width:200px; margin:0 0.5em 
 .wh-footer .wh-footer-bottom .sf-menu {
     margin: 0 0;
 }
+#upload_video_div{
+    background-color: red !important;
+}
