--- a/wp-content/themes/skilled-child/css/responsive.css
+++ b/wp-content/themes/skilled-child/css/responsive.css
@@ -899,6 +899,8 @@ div.table-responsive>div.dataTables_wrapper>div.row>div[class^="col-"]:last-chil
 /* ----------- iPhone ends here----------- */
 /* ipad css*/
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px)  {
+.highq-diff-box .content-listing .top-icon .aio-icon-header h3.aio-icon-title{font-size:16px!important;}
+	
 .student-registration .form-inline label,
 .tutor-registration .form-inline label{
 	width:28%  !Important;
