--- a/wp-content/themes/skilled-child/css/responsive.css
+++ b/wp-content/themes/skilled-child/css/responsive.css
@@ -626,6 +626,7 @@ input[type="range"].range-slider__range{
 
 .social-links{text-align:center !important;}
 
+.wh-footer .wh-footer-bottom .sf-menu,
 .wh-footer-bottom > .cbp-container > div{
 	padding:1.3em!Important;
 	 width: 380px !important;
@@ -808,8 +809,8 @@ input[type="range"].range-slider__range{
 
 .wh-footer .wh-footer-bottom .sf-menu,
 .wh-footer-bottom > .cbp-container > div{
-	padding:1.3em!Important;
-	 width: 390px !important;
+	padding:0.3em!Important;
+	width: 390px !important;
     margin: 0 auto!important;
     float: none !important;
 	text-align:center;
