--- a/wp-content/themes/skilled-child/style.css
+++ b/wp-content/themes/skilled-child/style.css
@@ -2166,3 +2166,8 @@ div.dataTables_wrapper div.dataTables_length select{width:200px; margin:0 0.5em 
 }
 
 .history-labels{ margin:0 0.5em;}
+
+.not-active {
+   pointer-events: none;
+   cursor: default;
+}
