--- a/wp-content/themes/skilled-child/style.css
+++ b/wp-content/themes/skilled-child/style.css
@@ -2167,7 +2167,7 @@ div.dataTables_wrapper div.dataTables_length select{width:200px; margin:0 0.5em 
 
 .history-labels{ margin:0 0.5em;}
 
-.not-active {
+.disbled {
    pointer-events: none;
    cursor: default;
 }
